--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,20 @@
+## v0.1.3 (2021.9.19)
+
+- Update DI-engine to version 0.1.1
+- Add serial evaluator for evaluation in training. It has tensorboard
+- Update single and benchmark evaluator
+- Update simple_rl entries. Adapt ding 0.1.1
+- Modify models in simple_rl. Use modules in ding
+- Modify env wrapper in simple_rl. Add inputs for discrete wrapper
+- Update config system in RL. Move all without server into env and policy
+- Update comple_config to adapt new system
+- Add CICT eval
+- Fix bug in BasicPlanner
+- Fix bug in implicit train_sl
+- Fix figure in doc
+- Add auto doc in github pages
+
+
 ## v0.1.2 (2021.9.2)
 
 - Rename 'orientation' to 'forward_vector'
