--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,19 @@
+## v0.2.0 (2021.11.1)
+- Update DI-engine to version 0.2.0
+- Reformat CIL to CILRS
+- Add CILRS dataset, model, policy and entry
+- Add LBC data collection and dataset
+- Add LBC BeV training entry
+- Add simple RL demo doc 
+- Add logger and should eval for all evaluators
+- Add enable save replay in DI-engine demos
+- Update IL tutorial and CILRS demo doc
+- Update Steer Noise wrapper
+- Update Benchmark datasaver and collector
+- Fix import bug in sensor helper
+- Fix visualization bug
+
+
 ## v0.1.3 (2021.9.19)
 
 - Update DI-engine to version 0.1.1
