--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+## v0.3.1 (2022.2.25)
+- Add MetaDrive Macro Env
+- Add common models
+- Add MetaDrive TopDown view PPO and SAC train
+- Add Macro env SAC PPO train and eval
+- Apply new distributed pipeline to simple rl
+- Update simple rl doc
+- Modify all PPO configs for new DI-engine
+
 ## v0.3.0 (2022.1.7)
 - Add MetaDrive support (env, entry, doc)
 - Add simulator selection when import
